--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "webpack --mode development --watch true",
     "build": "webpack --mode production ./frontendapp/src/index.js --output ./frontendapp/static/frontend/main.js"
   },
   "keywords": [],
@@ -26,6 +26,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.5.2",
     "webpack": "^4.20.2",
+    "webpack-bundle-tracker": "^0.4.2-beta",
     "webpack-cli": "^3.1.2"
   }
 }
