--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
-
-
       - run:
         name: install dependencies
-        command: |
-          sudo pip install pipenv
-          pipenv install
+        command: cd ~/corcleci-blueprint/django-rest-react-redux-blueprint/backend
+      - run:
+        command: pip install -r requirements.txt
+      - run:
+        command: python manage.py runserver
 
