--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,10 @@ jobs:
           PIPENV_VENV_IN_PROJECT: true
 
     steps:
-      - checkout
+      - checkout:
+          path: ~/backend
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
-      - run:
-          name: install dependencies
-          command: cd django-rest-react-redux-blueprint/backend
       - run:
           command: pip install -r requirements.txt
       - run:
