--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,7 @@ jobs:
       - run:
           command: pip install -r requirements.txt
       - run:
-          command: python manage.py runserver
-
+          command: |
+            python manage.py test backendapp/tests/
+      - store_test_results:
+          path: test-results
