--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,11 @@ jobs:
       - run:
           command: pip install -r requirements.txt
       - run:
+          name: run tests
           command: |
+            mkdir test-reports
             python manage.py test backendapp/tests/
       - store_test_results:
-          path: test-results
+          path: test-reports
+      - store_artifacts:
+          path: test-reports
