--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 Django==2.1.2
+django-nose==1.4.6
 django-webpack-loader==0.6.0
 djangorestframework==3.8.2
 gunicorn==19.9.0
+nose==1.3.7
 pytz==2018.5
