--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,10 @@ Django==2.1.2
 django-nose==1.4.6
 django-webpack-loader==0.6.0
 djangorestframework==3.8.2
+flake8==3.6.0
 gunicorn==19.9.0
+mccabe==0.6.1
 nose==1.3.7
+pycodestyle==2.4.0
+pyflakes==2.0.0
 pytz==2018.5
