--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 jobs:
-  build:
+  backend:
     working_directory: ~/circleci-blueprint/backend
     docker:
       - image: circleci/python:3.6.4
@@ -24,6 +24,23 @@ jobs:
           name: run tests
           command: |
             python manage.py test backendapp/tests/
+      - store_test_results:
+          path: test-reports
+      - store_artifacts:
+          path: test-reports
+
+  frontend:
+    working_directory: ~/circleci-blueprint/backend
+    docker:
+      - image: circleci/node:7.10
+
+    steps:
+      - checkout:
+          path: ~/circleci-blueprint
+      - run:
+          name: run tests
+          command: |
+            npm run test
       - store_test_results:
           path: test-reports
       - store_artifacts:
