--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,3 +45,12 @@ jobs:
             path: test-reports
         - store_artifacts:
             path: test-reports
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
