--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,6 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - test:
+      - test-frontend:
           requires:
             - build
