--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,9 @@ jobs:
         - checkout:
             path: ~/circleci-blueprint
         - run:
+            name: Update npm
+            command: 'sudo npm install -g npm@latest'
+        - run:
             name: run tests
             command: |
               npm run test
