--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             path: ~/circleci-blueprint
         - run:
             name: Update npm
-            command: 'sudo npm install -g npm@latest'
+            command: 'sudo npm install'
         - run:
             name: run tests
             command: |
