--- a/backend/package.json
+++ b/backend/package.json
@@ -21,21 +21,25 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.1.0",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-bundle-tracker": "^0.4.2-beta",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "babel-upgrade": "0.0.24",
+    "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
+    "react-bootstrap": "^1.0.0-beta.4",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
     "react-test-renderer": "^16.7.0",
