--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,19 @@
-Django==2.1.2
+awscli==1.16.57
+botocore==1.12.47
+colorama==0.3.9
+Django==2.1.5
 django-nose==1.4.6
 django-webpack-loader==0.6.0
 djangorestframework==3.8.2
-flake8==3.6.0
+docutils==0.14
 gunicorn==19.9.0
-mccabe==0.6.1
+jmespath==0.9.3
 nose==1.3.7
-pycodestyle==2.4.0
-pyflakes==2.0.0
+pyasn1==0.4.4
+python-dateutil==2.7.5
 pytz==2018.5
+PyYAML==3.13
+rsa==3.4.2
+s3transfer==0.1.13
+six==1.11.0
+urllib3==1.24.1
